--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
                     <p class="entrega">
                         Entrega <strong>GRÁTIS</strong><br>
+                        <small>entre em contato para mais informações</small>
                     </p>
 
 
