--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <a href="#manifesto">Manifesto</a>
                     <a href="#contato">Contato</a>
                     <a href="#comprar">Comprar</a>
+                    <a href="#avaliacao">Avaliações</a>
                 </div>
 
                 <div class="icons">
@@ -60,9 +61,9 @@
                     <h3>Mortdecai</h3>
 
                     <div class="avaliacao">
-                        <span class="nota">4,9</span>
+                        <span class="nota">5,0</span>
                         <span class="estrelas">★★★★★</span>
-                        <span class="reviews">(2.222 avaliações)</span>
+                        <span class="reviews">(consulte avaliações)</span>
                     </div>
 
                     <div class="preco">
@@ -74,8 +75,6 @@
                         Entrega <strong>GRÁTIS</strong><br>
                         <small>entre em contato para mais informações</small>
                     </p>
-
-
                 </div>
             </div>
 
@@ -165,6 +164,12 @@
                 <p>Livro · Manifesto · Contato · Comprar</p>
             </div>
         </div>
+        
+        <section class="box" id="avaliacao">
+            <h2>Comentários</h2>
+            <div id="disqus_thread"></div>
+        </section>
+
 
         <footer id="contato">
             <p class="contact">
@@ -174,8 +179,22 @@
             <p class="contact">© 2026 Mortdecai — Hidden Club</p>
         </footer>
 
-       
         <script src="script.js"></script>
+        <script>
+        var disqus_config = function () {
+            this.page.url = "https://hiddenclub.netlify.app";
+            this.page.identifier = "mortdecai-home";
+        };
+        </script>
+
+        <script>
+            (function() {
+                var d = document, s = d.createElement('script');
+                s.src = 'https://hiddenclub.disqus.com/embed.js';
+                s.setAttribute('data-timestamp', +new Date());
+                (d.head || d.body).appendChild(s);
+            })();
+        </script>
 
         <div class="carrinho-overlay" id="carrinho">
         <div class="carrinho-box">
@@ -219,4 +238,6 @@
     </div>
     </body>
 </html>
+
+
 
